# burn-live-inference

./: Cargo.toml  README.md
src/: decoding.rs  error.rs  handlers.rs  main.rs
src/model/: mod.rs  model.rs  worker.rs
