[package]
name = "burn-live-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
burn = { version = "0.18.0", features = ["ndarray", "dataset", "vision"] }
image = "0.25.6"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
burn-import = "0.18.0"
